--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html, body
+{
+	font-family: Arial;
+	font-size: 13px;
+}
+
 header
  {
 display: flex;
@@ -10,27 +16,90 @@ list-style-type: none;
 display: flex;
 align-items: center;
 }
+
 header li
 {
 	margin: 0px 6px;
 }
-#main
+
+header a
+{
+	text-decoration: none;
+	color : black;
+}
+header a:hover
+{
+	text-decoration: underline;
+}
+#btn_login
+{
+	background-color: #4285f4;
+	color: white;
+	padding: 6px 12px;
+	border-radius: 2px;
+}
+
+main
 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 
 }
+input
+{
+	width: 584px;
+	height: 44px;
+	border: none;
+	border-radius: 2px;
+	box-shadow: 0px 0px 6px grey;
+	margin-top: 12px;
+	margin-bottom: 12px;
+}
+
+input:hover
+{
+	box-shadow: 0px 0px 10px grey;
+}
+.btn
+
+#logo 
+{
+	margin-top: 190px;
+}
+
+
 footer
 {
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-end;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+
+
 }
 footer ul
 {
 	list-style-type: none;
-	display: flex;
-	align-items: center;
+	
 
 }
+
+footer li
+{
+	display: inline;
+	padding-right: 27px;
+
+}
+
+footer li:nth-child(n+4)
+{
+	float: right;
+}
+
+footer ul li:nth-child(4) a {
+	margin-right: 0px;
+}
+
+ 
