--- a/style.css
+++ b/style.css
@@ -53,16 +53,36 @@ input
 	height: 44px;
 	border: none;
 	border-radius: 2px;
-	box-shadow: 0px 0px 6px grey;
+	box-shadow: 0px 2px 6px grey;
 	margin-top: 12px;
 	margin-bottom: 12px;
+	shado
 }
 
 input:hover
 {
-	box-shadow: 0px 0px 10px grey;
+	box-shadow: 0px 2px 10px grey;
 }
-.btn
+main button
+{
+	border: none;
+	border-radius: 2px;
+	background-color: rgb(236, 240, 241);
+	padding: 12px 16px;
+	font-weight: bold;
+	color: grey;
+}
+main button:hover
+{
+	border: 1px solid rgb(189, 195, 199);
+	border-radius: 2px;
+	background-color: rgb(236, 240, 241);
+	padding: 12px 16px;
+	font-weight: bold;
+	color: black;
+	box-shadow: 3px 3px 6px rgb(189, 195, 199);
+
+}
 
 #logo 
 {
@@ -76,21 +96,35 @@ footer
 	left: 0;
 	right: 0;
 	bottom: 0;
+	background-color: rgb(236, 240, 241);
+	color: grey;
+	border-top : 2px solid rgb(228, 233, 237);
 
-
+}
+footer a
+{
+	text-decoration: none;
+	color: grey;
+}
+footer a:hover
+{
+	text-decoration: underline;
+}
+footer p
+{
+	margin-left: 42px;
 }
 footer ul
 {
 	list-style-type: none;
-	
-
+	border-top : 2px solid rgb(228, 233, 237);
+	padding-top : 12px;
 }
 
 footer li
 {
 	display: inline;
 	padding-right: 27px;
-
 }
 
 footer li:nth-child(n+4)
